CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(test)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    SET(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -Wl,-segprot,__TEXT,rwx,rwx")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")

endif()


ADD_EXECUTABLE(a.out main.cpp)
