CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(test)

IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

IF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    SET(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -Wl,-segprot,__TEXT,rwx,rwx")
ENDIF()

IF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")

ENDIF()


ADD_EXECUTABLE(a.out main.cpp)
